Cleanup of internal API